# mlops_assign01

./: .dockerignore  .dvcignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
data/: iris.csv.dvc
helm/iris-classifier/: Chart.yaml  values.yaml
helm/iris-classifier/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
k8s/: deployment.yaml  ingress.yaml  service.yaml
reports/: report.md  verification_output.md
scripts/: run_local.sh  setup_kind.sh
src/mlops_assign01/: data.py  serve.py  train.py  tune.py
tests/: test_data.py  test_serve.py  test_train.py
