[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-assign01"
version = "0.1.0"
description = "BITS M.Tech MLOps Assignment 01 — end-to-end MLOps pipeline for Iris classification"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Hari Jaiswal" }]
dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "mlflow>=2.16",
    "optuna>=4.0",
    "optuna-integration[mlflow]>=4.0",
    "flask>=3.0",
    "gunicorn>=22.0",
    "joblib>=1.4",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "dvc>=3.55",
]

[project.scripts]
mlops-train = "mlops_assign01.train:main"
mlops-tune = "mlops_assign01.tune:main"
mlops-serve = "mlops_assign01.serve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
